--- a/biaodanluru.html
+++ b/biaodanluru.html
@@ -120,6 +120,9 @@
 							<li class="mui-table-view-cell pro" id="pinzhi_mrbbaofeishenqing">
 								<a class="mui-navigate-right">MRB报废</a>
 							</li>
+							<li class="mui-table-view-cell pro" id="ganmo_GanMoGuangChengXiang">
+								<a class="mui-navigate-right">干膜光成像</a>
+							</li>
 				 		</ul>
 				 	</div>
 				 </li>
@@ -394,9 +397,9 @@
 						<a class="mui-navigate-right" href="#">干膜</a>
 						<div class="mui-collapse-content">
 							<ul class="mui-table-view">
-								<li class="mui-table-view-cell pro" id="ganmo_taocimoban">
+								<!-- <li class="mui-table-view-cell pro" id="ganmo_taocimoban">
 									<a class="mui-navigate-right">陶瓷磨板</a>
-								</li>
+								</li> -->
 								<li class="mui-table-view-cell pro" id="ganmo_CCDbaoguang">
 									<a class="mui-navigate-right">CCD曝光</a>
 								</li>
@@ -406,17 +409,14 @@
 								<li class="mui-table-view-cell pro" id="ganmo_GanMoXianYingJi">
 									<a class="mui-navigate-right">干膜显影机</a>
 								</li>
-								<li class="mui-table-view-cell pro" id="pinzhi_mrbbaofeishenqing">
+								<!-- <li class="mui-table-view-cell pro" id="pinzhi_mrbbaofeishenqing">
 									<a class="mui-navigate-right">干膜报废</a>
-								</li>
+								</li> -->
 								<li class="mui-table-view-cell pro" id="ganmo_GanMoChuShu">
 									<a class="mui-navigate-right">干膜出数</a>
 								</li>
 								<li class="mui-table-view-cell pro" id="lvyou_FanGong">
 									<a class="mui-navigate-right">干膜返工</a>
-								</li>
-								<li class="mui-table-view-cell pro" id="ganmo_GanMoGuangChengXiang">
-									<a class="mui-navigate-right">干膜光成像</a>
 								</li>
 								<li class="mui-table-view-cell pro" id="ganmo_GanMoShiKe">
 									<a class="mui-navigate-right">干膜蚀刻</a>
@@ -427,9 +427,6 @@
 								<li class="mui-table-view-cell pro" id="ganmo_GanMoTieMoJi">
 									<a class="mui-navigate-right">干膜贴膜</a>
 								</li>
-							<!-- 	<li class="mui-table-view-cell pro" id="ganmo_GanMoZhonCuHua">
-									<a class="mui-navigate-right">干膜中粗化</a>
-								</li> -->
 							</ul>
 						</div>
 					</li>
