增加自动曝光机表

--- a/biaodanluru.html
+++ b/biaodanluru.html
@@ -403,6 +403,9 @@
 								<li class="mui-table-view-cell pro" id="ganmo_CCDbaoguang">
 									<a class="mui-navigate-right">CCD曝光</a>
 								</li>
+								<li class="mui-table-view-cell pro" id="ganmo_quanzidongbaoguang">
+									<a class="mui-navigate-right">全自动曝光</a>
+								</li>
 								<li class="mui-table-view-cell pro" id="ganmo_LDIbaoguang">
 									<a class="mui-navigate-right">LDI曝光</a>
 								</li>
