--- a/biaodanluru.html
+++ b/biaodanluru.html
@@ -60,9 +60,9 @@
 				 			<li class="mui-table-view-cell pro" id="waixing_shike">
 				 				<a class="mui-navigate-right">外层蚀刻检验</a>
 				 			</li>
-				 			<li class="mui-table-view-cell pro" id="pinzhi_waicengxkxj">
+				 			<!-- <li class="mui-table-view-cell pro" id="pinzhi_waicengxkxj">
 				 				<a class="mui-navigate-right">外层线宽线距</a>
-				 			</li>
+				 			</li> -->
 				 			<li class="mui-table-view-cell pro" id="pinzhi_shikehoukongjing">
 				 				<a class="mui-navigate-right">蚀刻后孔径</a>
 				 			</li>
