--- a/waiceng/AOIJianXiu.html
+++ b/waiceng/AOIJianXiu.html
@@ -291,23 +291,23 @@
 				var information = {
 					machineNo: document.getElementById("machineNo").value || '',
 					prodQty: document.getElementById("prodQty").value || '',
-					defect001: document.getElementById("defect001").value || '',
-					defect002: document.getElementById("defect002").value || '',
-					defect003: document.getElementById("defect003").value || '',
-					defect004: document.getElementById("defect004").value || '',
-					defect005: document.getElementById("defect005").value || '',
-					defect006: document.getElementById("defect006").value || '',
-					defect007: document.getElementById("defect007").value || '',
-					defect008: document.getElementById("defect008").value || '',
-					defect009: document.getElementById("defect009").value || '',
-					defect010: document.getElementById("defect010").value || '',
-					defect011: document.getElementById("defect011").value || '',
-					defect012: document.getElementById("defect012").value || '',
-					defect013: document.getElementById("defect013").value || '',
-					defect014: document.getElementById("defect014").value || '',
-					defect015: document.getElementById("defect015").value || '',
-					defect016: document.getElementById("defect016").value || '',
-					others: document.getElementById("others").value || '',
+					defect001: document.getElementById("defect001").value || 0,
+					defect002: document.getElementById("defect002").value || 0,
+					defect003: document.getElementById("defect003").value || 0,
+					defect004: document.getElementById("defect004").value || 0,
+					defect005: document.getElementById("defect005").value || 0,
+					defect006: document.getElementById("defect006").value || 0,
+					defect007: document.getElementById("defect007").value || 0,
+					defect008: document.getElementById("defect008").value || 0,
+					defect009: document.getElementById("defect009").value || 0,
+					defect010: document.getElementById("defect010").value || 0,
+					defect011: document.getElementById("defect011").value || 0,
+					defect012: document.getElementById("defect012").value || 0,
+					defect013: document.getElementById("defect013").value || 0,
+					defect014: document.getElementById("defect014").value || 0,
+					defect015: document.getElementById("defect015").value || 0,
+					defect016: document.getElementById("defect016").value || 0,
+					others: document.getElementById("others").value || 0,
 					operator: document.getElementById("operator").value || '',
 
 				}
