--- a/biaodanluru.html
+++ b/biaodanluru.html
@@ -54,12 +54,15 @@
 				 			<li class="mui-table-view-cell pro" id="pinzhi_dutongqiepian">
 				 				<a class="mui-navigate-right">镀铜切片</a>
 				 			</li>
-				 			<li class="mui-table-view-cell pro" id="pinzhi_neicengxkxj">
+				 			<!-- <li class="mui-table-view-cell pro" id="pinzhi_neicengxkxj">
 				 				<a class="mui-navigate-right">内层线宽线距</a>
-				 			</li>
+				 			</li> -->
 				 			<li class="mui-table-view-cell pro" id="waixing_shike">
 				 				<a class="mui-navigate-right">外层蚀刻检验</a>
 				 			</li>
+							<li class="mui-table-view-cell pro" id="neiceng_NeiCengSuangXinShiKe">
+								<a class="mui-navigate-right">内层酸性蚀刻</a>
+							</li>
 				 			<!-- <li class="mui-table-view-cell pro" id="pinzhi_waicengxkxj">
 				 				<a class="mui-navigate-right">外层线宽线距</a>
 				 			</li> -->
@@ -158,9 +161,7 @@
 								<li class="mui-table-view-cell pro" id="neiceng_ShiKeShouJian">
 									<a class="mui-navigate-right">蚀刻首/量</a>
 								</li>
-								<li class="mui-table-view-cell pro" id="neiceng_NeiCengSuangXinShiKe">
-									<a class="mui-navigate-right">内层酸性蚀刻</a>
-								</li>
+								
 								<li class="mui-table-view-cell pro" id="neiceng_TuBuXianShengChan">
 									<a class="mui-navigate-right">涂布线生产</a>
 								</li>
